resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bpower
  labels:
    app: bpower
spec:
  ports:
  - port: 5000
  selector:
    app: bpower
